Bug #2123 <https://bugs.freedesktop.org/show_bug.cgi?id=2123> Attachment     #1587 <https://bugs.freedesktop.org/attachment.cgi?id=1587> Call to     uname should not check for return == 0, but for >= 0 instead